# crypto-bot

./: CLAUDE.md  analyzer.py  auto_trader.py  auto_trades.json  bot.py  build_v01.sh  chart  config.py  download  market_monitor.py  processed_signals.json  pyproject.toml  requirements.txt  signal_queue.json  trader.py  trader_close_test.py  trader_order_test.py  trader_test.py  trader_tpsl_test.py  webapp.py
.claude/.claude/: settings.json
blacktide-web/: .env.example  README.md  blacktide-design-system.md  blacktide-full-rebuild-master.md  blacktide-site-rebuild-plan.md  middleware.ts  package-lock.json  package.json  tailwind.config.ts
blacktide-web/app/: globals.css  layout.tsx  manifest.ts  page.tsx
blacktide-web/components/: Analytics.tsx  Badges.tsx  CandleChart.tsx  FearGauge.tsx  Footer.tsx  FxBackground.tsx  LegalLayout.tsx  LegalModal.tsx  MobileNav.tsx  Nav.tsx  PageHeader.tsx  Paywall.tsx  PriceCard.tsx  PriceChart.tsx  PricingModal.tsx  Shell.tsx  Sidebar.tsx  SignalCard.tsx  SignalModal.tsx  SignalPerf.tsx  Sparkline.tsx  StatCard.tsx  SymbolDetail.tsx  TickerTape.tsx  Toast.tsx  Topbar.tsx  TradingViewChart.tsx  UserMenu.tsx  VerifyBanner.tsx  ui.tsx
blacktide-web/lib/: access.ts  auth.ts  botMap.ts  bybit.ts  email.ts  format.ts  legalContent.ts  mock.ts  redis.ts  store.ts  theme.ts  types.ts  useFetch.ts  useMarket.ts  usePremium.ts  usePullToRefresh.ts  (+2 more)
docs/: analyzer.md  architecture.md  deployment.md  trading.md  version_history.md  web.md
tests/: test_example.py  test_v57.py  test_v61.py  test_v66_field_chain.py  verify_v66_chain.py
(+55 files in other folders)
